--- a/DTF/src/pages/home/home.scss
+++ b/DTF/src/pages/home/home.scss
@@ -1,3 +1,21 @@
-page-home {
+page-home{
+ .back{
+     background: linear-gradient(to bottom,#40C4FF 0%,#015798 100%)
+ }
+// .image:hover {
+// -webkit-transform:scale(0.5);
+// transform:scale(0.5);
+// }
+// .image {
+// -webkit-transition: all 0.7s ease;
+// transition: all 0.7s ease;
+// }
+
+// button:hover{
+//     background-color: orange;
+//     color:white;
+// }
 
 }
+
+
