--- a/DTF/src/theme/variables.scss
+++ b/DTF/src/theme/variables.scss
@@ -31,6 +31,7 @@ $colors: (
   dark:       #222
 );
 
+$toolbar-background : blue;
 
 // App iOS Variables
 // --------------------------------------------------
