--- a/DTF/src/theme/variables.scss
+++ b/DTF/src/theme/variables.scss
@@ -12,7 +12,7 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
+$toolbar-background: #0D47A1;
 
 
 // Named Color Variables
