Call button and Next Button changed

--- a/DTF/src/pages/home/home.scss
+++ b/DTF/src/pages/home/home.scss
@@ -21,6 +21,17 @@ page-home{
         font-size: 150%;
     }
 
+#call-button
+    {
+        width: 60%;
+        font-size: smaller;
+        margin: 0;
+        float:left;
+        height: 50px;
+        background-color: #2874A6;
+        border: 1px solid lightgreen;
+        line-height: 150%
+    }
 
 }
 
