Complete validation and better structure of single trip

--- a/DTF/src/pages/home/home.scss
+++ b/DTF/src/pages/home/home.scss
@@ -33,6 +33,13 @@ page-home{
         line-height: 150%
     }
 
+    #next-button 
+    {
+        float:right;
+        width:35%;
+        height: 50px;
+    }
+
 }
 
 
