--- a/DTF/src/pages/list/list.scss
+++ b/DTF/src/pages/list/list.scss
@@ -2,5 +2,25 @@ page-list {
 
 .back{
      background: linear-gradient(to bottom,#40C4FF 0%,#015798 100%)
- }    
+ }
+
+ #date-button
+ {
+     background-color:transparent;
+     color: #000000;
+     padding-left: 16px;
+     padding-right: 14px;
+     margin: 13px 8px 16px 0;
+     font-size: 1.6rem;
+     width: 100%;
+     text-align: left;
+ }
+
+ #arrow-icon
+ {
+     float: right;
+     text-align: right;
+     font-size: 2.2rem;
+     color: #999999;
+ }
 }
